--- a/env.example
+++ b/env.example
@@ -1,9 +1,13 @@
 # Twitter API Configuration
 # Get these from https://developer.twitter.com/en/portal/dashboard
-TWITTER_API_KEY=a4lFBgNiLDmGY8FDEn6gfVanq
-TWITTER_API_SECRET=yoCwngKlXMTmb03B6yZkh2BoTepyBgtX1DEDIisTNyHr5uAN41
-TWITTER_ACCESS_TOKEN=1320260327481757697-lR1TrDiLW1YnTht4dpoG824pwNXfc0
-TWITTER_ACCESS_TOKEN_SECRET=gOVtGZeaolTaODGJkiHGNiBmcUwXnn9TpUfhI8Jo6JG9N
+TWITTER_API_KEY=your_twitter_api_key_here
+TWITTER_API_SECRET=your_twitter_api_secret_here
+TWITTER_ACCESS_TOKEN=your_twitter_access_token_here
+TWITTER_ACCESS_TOKEN_SECRET=your_twitter_access_token_secret_here
+
+# Twitter OAuth 2.0 Credentials (for elevated access)
+TWITTER_CLIENT_ID=your_twitter_client_id_here
+TWITTER_CLIENT_SECRET=your_twitter_client_secret_here
 
 # Amazon Affiliate Configuration
 AMAZON_AFFILIATE_TAG=your_amazon_affiliate_tag_here
